refactor(api): 重构 OpenClaw API 客户端实现
- 移除 ModelManagementOptions 类及其相关配置选项
- 将日志框架从 Apache Commons Logging 切换到 SLF4J
- 更新 OpenClawApi 类文档，明确支持 /v1/chat/completions、/v1/models、/v1/embeddings 和 /v1/responses 端点
- 为 chat、streamingChat 和 embed 方法添加额外 HTTP 头支持参数
- 新增 responses 方法用于调用 OpenAI 兼容的 /v1/responses 端点
- 更新 ChatRequest 记录类，移除 format、keepAlive、options、think 字段，添加 OpenAI 兼容字段如 max_completion_tokens、temperature 等
- 简化 Message 记录类，移除 images 和 thinking 字段
- 更新 ChatResponse 记录类，简化其字段结构以匹配 OpenAI 格式
- 添加 ListModelResponse、ModelData 和 ModelResponse 记录类用于模型管理端点
-