@@ -1,26 +1,60 @@
 package io.github.partmeai.openclaw.api;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+/**
+ * Tests for {@link OpenClawApiHelper}.
+ */
 public class OpenClawApiHelperTests {
 
 	@Test
-	void isStreamingToolCallWhenToolCallsIsNullShouldReturnFalse() {
-		var response = new OpenClawApi.ChatResponse(null, null, null, null, null, null, null, null, null, null, null,
-				null, null, null, null);
+	void isStreamingToolCallWhenToolCallsInDeltaShouldReturnTrue() {
+		var toolCall = new OpenClawApi.Message.ToolCall("call-1", "function",
+				new OpenClawApi.Message.ToolCallFunction("test_fn", "{}"));
+		var delta = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT)
+				.toolCalls(List.of(toolCall)).build();
+		var choice = new OpenClawApi.ChatResponse.Choice(0, null, delta, null);
+		var response = new OpenClawApi.ChatResponse("chatcmpl-1", "chat.completion.chunk",
+				null, "openclaw/default", List.of(choice), null);
+		assertThat(OpenClawApiHelper.isStreamingToolCall(response)).isTrue();
+	}
+
+	@Test
+	void isStreamingToolCallWhenNoToolCallsShouldReturnFalse() {
+		var delta = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT)
+				.content("hello").build();
+		var choice = new OpenClawApi.ChatResponse.Choice(0, null, delta, null);
+		var response = new OpenClawApi.ChatResponse("chatcmpl-1", "chat.completion.chunk",
+				null, "openclaw/default", List.of(choice), null);
 		assertThat(OpenClawApiHelper.isStreamingToolCall(response)).isFalse();
 	}
 
 	@Test
-	void isStreamingDoneWhenDoneIsTrueAndDoneReasonIsStopShouldReturnTrue() {
-		var response = new OpenClawApi.ChatResponse(null, null, null, "stop", true, null, null, null, null, null, null,
-				null, null, null, null);
+	void isStreamingToolCallWhenResponseIsNullShouldReturnFalse() {
+		assertThat(OpenClawApiHelper.isStreamingToolCall(null)).isFalse();
+	}
+
+	@Test
+	void isStreamingDoneWhenHasFinishReasonShouldReturnTrue() {
+		var delta = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT).build();
+		var choice = new OpenClawApi.ChatResponse.Choice(0, null, delta, "stop");
+		var response = new OpenClawApi.ChatResponse("chatcmpl-1", "chat.completion.chunk",
+				null, "openclaw/default", List.of(choice), null);
 		assertThat(OpenClawApiHelper.isStreamingDone(response)).isTrue();
+	}
+
+	@Test
+	void isStreamingDoneWhenNoFinishReasonShouldReturnFalse() {
+		var delta = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT)
+				.content("hello").build();
+		var choice = new OpenClawApi.ChatResponse.Choice(0, null, delta, null);
+		var response = new OpenClawApi.ChatResponse("chatcmpl-1", "chat.completion.chunk",
+				null, "openclaw/default", List.of(choice), null);
+		assertThat(OpenClawApiHelper.isStreamingDone(response)).isFalse();
 	}
 
 	@Test
@@ -29,33 +63,36 @@ public class OpenClawApiHelperTests {
 	}
 
 	@Test
-	void mergeWhenBothHaveValues() {
-		var prevMsg = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT).content("Hello").build();
-		var prev = new OpenClawApi.ChatResponse("m1", null, prevMsg, null, null, 100L, 50L, 10, null, 5, 100L,
-				null, null, null, null);
-		var curMsg = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT).content("World").build();
-		var cur = new OpenClawApi.ChatResponse("m2", null, curMsg, null, null, 200L, 100L, 20, null, 10, 200L,
-				null, null, null, null);
-
-		var result = OpenClawApiHelper.merge(prev, cur);
-		assertThat(result.model()).isEqualTo("m1m2");
-		assertThat(result.message().content()).isEqualTo("HelloWorld");
-		assertThat(result.totalDuration()).isEqualTo(300L);
-		assertThat(result.evalCount()).isEqualTo(15);
+	void getContentFromMessage() {
+		var msg = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT)
+				.content("Hello World").build();
+		var choice = new OpenClawApi.ChatResponse.Choice(0, msg, null, "stop");
+		var response = new OpenClawApi.ChatResponse("chatcmpl-1", "chat.completion",
+				null, "openclaw/default", List.of(choice), null);
+		assertThat(OpenClawApiHelper.getContent(response)).isEqualTo("Hello World");
 	}
 
 	@Test
-	void mergeListsCombines() {
-		var prevMsg = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT)
-				.images(Arrays.asList("a", "b")).build();
-		var prev = new OpenClawApi.ChatResponse(null, null, prevMsg, null, null, null, null, null, null, null, null,
-				null, null, null, null);
-		var curMsg = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT)
-				.images(List.of("c")).build();
-		var cur = new OpenClawApi.ChatResponse(null, null, curMsg, null, null, null, null, null, null, null, null,
-				null, null, null, null);
+	void getContentFromDelta() {
+		var delta = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT)
+				.content("Hello").build();
+		var choice = new OpenClawApi.ChatResponse.Choice(0, null, delta, null);
+		var response = new OpenClawApi.ChatResponse("chatcmpl-1", "chat.completion.chunk",
+				null, "openclaw/default", List.of(choice), null);
+		assertThat(OpenClawApiHelper.getContent(response)).isEqualTo("Hello");
+	}
 
-		var result = OpenClawApiHelper.merge(prev, cur);
-		assertThat(result.message().images()).containsExactly("a", "b", "c");
+	@Test
+	void getToolCallsFromMessage() {
+		var toolCall = new OpenClawApi.Message.ToolCall("call-1", "function",
+				new OpenClawApi.Message.ToolCallFunction("test_fn", "{\"arg\":1}"));
+		var msg = OpenClawApi.Message.builder(OpenClawApi.Message.Role.ASSISTANT)
+				.toolCalls(List.of(toolCall)).build();
+		var choice = new OpenClawApi.ChatResponse.Choice(0, msg, null, "tool_calls");
+		var response = new OpenClawApi.ChatResponse("chatcmpl-1", "chat.completion",
+				null, "openclaw/default", List.of(choice), null);
+		var toolCalls = OpenClawApiHelper.getToolCalls(response);
+		assertThat(toolCalls).hasSize(1);
+		assertThat(toolCalls.get(0).function().name()).isEqualTo("test_fn");
 	}
 }
